--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,315 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-07 20:19:15 -0400 
+%% Created for Pete Su at 2023-08-07 20:40:21 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Giddings2020a,
+	author = {Steven B. Giddings and Gustavo J. Turiaci},
+	date-added = {2023-08-07 20:40:15 -0400},
+	date-modified = {2023-08-07 20:40:17 -0400},
+	doi = {10.1007/jhep09(2020)194},
+	journal = {J. High Energ. Phys.},
+	note = {\href{http://arxiv.org/abs/2004.02900v2}{arxiv:2004.02900v2}},
+	number = {9},
+	publisher = {Springer Science and Business Media {LLC}},
+	title = {Wormhole calculus, replicas, and entropies},
+	url = {https://doi.org/10.1007%2Fjhep09%282020%29194},
+	volume = {2020},
+	year = 2020,
+	bdsk-url-1 = {https://doi.org/10.1007%2Fjhep09%282020%29194},
+	bdsk-url-2 = {https://doi.org/10.1007/jhep09(2020)194}}
+
+@article{Giddings1988,
+	author = {Giddings, Steven B and Strominger, Andrew},
+	date-added = {2023-08-07 20:39:57 -0400},
+	date-modified = {2023-08-07 20:39:59 -0400},
+	journal = {Nuclear Physics B},
+	number = {4},
+	pages = {854--866},
+	publisher = {Elsevier},
+	title = {Loss of incoherence and determination of coupling constants in quantum gravity},
+	volume = {307},
+	year = {1988}}
+
+@article{Giddings1995,
+	author = {Giddings, Steven B},
+	date-added = {2023-08-07 20:38:37 -0400},
+	date-modified = {2023-08-07 20:39:06 -0400},
+	journal = {arXiv preprint hep-th/9508151},
+	note = {\href{https://arxiv.org/abs/hep-th/9508151}{arxiv:hep-th/9508151}},
+	title = {The black hole information paradox},
+	year = {1995}}
+
+@article{Giddings2013a,
+	author = {Steven B. Giddings},
+	date-added = {2023-08-07 20:38:00 -0400},
+	date-modified = {2023-08-07 20:38:01 -0400},
+	doi = {10.1103/physrevd.88.104013},
+	journal = {Phys. Rev. D},
+	note = {\href{http://arxiv.org/abs/1308.3488v2}{arxiv:1308.3488v2}},
+	number = {10},
+	publisher = {American Physical Society ({APS})},
+	title = {Statistical physics of black holes as quantum-mechanical systems},
+	url = {https://doi.org/10.1103%2Fphysrevd.88.104013},
+	volume = {88},
+	year = 2013,
+	bdsk-url-1 = {https://doi.org/10.1103%2Fphysrevd.88.104013},
+	bdsk-url-2 = {https://doi.org/10.1103/physrevd.88.104013}}
+
+@article{Giddings2020,
+	author = {Steven B. Giddings},
+	date-added = {2023-08-07 20:37:12 -0400},
+	date-modified = {2023-08-07 20:37:24 -0400},
+	doi = {10.1103/physrevd.102.125022},
+	journal = {Phys. Rev. D},
+	note = {\href{http://arxiv.org/abs/2006.10834v2}{arxiv:2006.10834v2}},
+	number = {12},
+	publisher = {American Physical Society ({APS})},
+	title = {{Schrodinger evolution of the Hawking state}},
+	url = {https://doi.org/10.1103%2Fphysrevd.102.125022},
+	volume = {102},
+	year = 2020,
+	bdsk-url-1 = {https://doi.org/10.1103%2Fphysrevd.102.125022},
+	bdsk-url-2 = {https://doi.org/10.1103/physrevd.102.125022}}
+
+@article{Giddings2019,
+	author = {Steven B. Giddings},
+	date-added = {2023-08-07 20:36:55 -0400},
+	date-modified = {2023-08-07 20:36:57 -0400},
+	doi = {10.1007/s10701-019-00239-1},
+	journal = {Found Phys},
+	note = {\href{http://arxiv.org/abs/1803.04973v2}{arxiv:1803.04973v2}},
+	number = {3},
+	pages = {177--190},
+	publisher = {Springer Science and Business Media {LLC}},
+	title = {Quantum-First Gravity},
+	url = {https://doi.org/10.1007%2Fs10701-019-00239-1},
+	volume = {49},
+	year = 2019,
+	bdsk-url-1 = {https://doi.org/10.1007%2Fs10701-019-00239-1},
+	bdsk-url-2 = {https://doi.org/10.1007/s10701-019-00239-1}}
+
+@article{Giddings1994,
+	author = {Giddings, Steven B},
+	date-added = {2023-08-07 20:35:41 -0400},
+	date-modified = {2023-08-07 20:36:19 -0400},
+	journal = {arXiv preprint},
+	note = {\href{https://arxiv.org/abs/hep-th/9412138}{arxiv:hep-th/9412138}},
+	title = {Quantum mechanics of black holes},
+	year = {1994}}
+
+@article{Giddings1992a,
+	author = {Steven B. Giddings and William M. Nelson},
+	date-added = {2023-08-07 20:34:42 -0400},
+	date-modified = {2023-08-07 20:34:44 -0400},
+	doi = {10.1103/physrevd.46.2486},
+	journal = {Phys. Rev. D},
+	note = {\href{http://arxiv.org/abs/hep-th/9204072v3}{arxiv:hep-th/9204072v3}},
+	number = {6},
+	pages = {2486--2496},
+	publisher = {American Physical Society ({APS})},
+	title = {Quantum emission from two-dimensional black holes},
+	url = {https://doi.org/10.1103%2Fphysrevd.46.2486},
+	volume = {46},
+	year = 1992,
+	bdsk-url-1 = {https://doi.org/10.1103%2Fphysrevd.46.2486},
+	bdsk-url-2 = {https://doi.org/10.1103/physrevd.46.2486}}
+
+@article{Giddings2014,
+	author = {Steven B. Giddings},
+	date-added = {2023-08-07 20:34:09 -0400},
+	date-modified = {2023-08-07 20:34:10 -0400},
+	doi = {10.1103/physrevd.90.124033},
+	journal = {Phys. Rev. D},
+	note = {\href{http://arxiv.org/abs/1406.7001v3}{arxiv:1406.7001v3}},
+	number = {12},
+	publisher = {American Physical Society ({APS})},
+	title = {Possible observational windows for quantum effects from black holes},
+	url = {https://doi.org/10.1103%2Fphysrevd.90.124033},
+	volume = {90},
+	year = 2014,
+	bdsk-url-1 = {https://doi.org/10.1103%2Fphysrevd.90.124033},
+	bdsk-url-2 = {https://doi.org/10.1103/physrevd.90.124033}}
+
+@article{Giddings2017,
+	author = {Steven B. Giddings},
+	date-added = {2023-08-07 20:33:14 -0400},
+	date-modified = {2023-08-07 20:33:16 -0400},
+	doi = {10.1007/jhep12(2017)047},
+	journal = {J. High Energ. Phys.},
+	note = {\href{http://arxiv.org/abs/1701.08765v2}{arxiv:1701.08765v2}},
+	number = {12},
+	publisher = {Springer Science and Business Media {LLC}},
+	title = {Nonviolent unitarization: basic postulates to soft quantum structure of black holes},
+	url = {https://doi.org/10.1007%2Fjhep12%282017%29047},
+	volume = {2017},
+	year = 2017,
+	bdsk-url-1 = {https://doi.org/10.1007%2Fjhep12%282017%29047},
+	bdsk-url-2 = {https://doi.org/10.1007/jhep12(2017)047}}
+
+@article{Giddings2013,
+	author = {Steven B. Giddings},
+	date-added = {2023-08-07 20:32:59 -0400},
+	date-modified = {2023-08-07 20:33:01 -0400},
+	doi = {10.1103/physrevd.88.064023},
+	journal = {Phys. Rev. D},
+	note = {\href{http://arxiv.org/abs/1211.7070v3}{arxiv:1211.7070v3}},
+	number = {6},
+	publisher = {American Physical Society ({APS})},
+	title = {Nonviolent nonlocality},
+	url = {https://doi.org/10.1103%2Fphysrevd.88.064023},
+	volume = {88},
+	year = 2013,
+	bdsk-url-1 = {https://doi.org/10.1103%2Fphysrevd.88.064023},
+	bdsk-url-2 = {https://doi.org/10.1103/physrevd.88.064023}}
+
+@article{Giddings2012,
+	author = {Steven B. Giddings},
+	date-added = {2023-08-07 20:31:33 -0400},
+	date-modified = {2023-08-07 20:31:46 -0400},
+	doi = {10.1103/physrevd.85.044038},
+	journal = {Phys. Rev. D},
+	note = {\href{http://arxiv.org/abs/1108.2015v2}{arxiv:1108.2015v2}},
+	number = {4},
+	publisher = {American Physical Society ({APS})},
+	title = {Models for unitary black hole disintegration},
+	url = {https://doi.org/10.1103%2Fphysrevd.85.044038},
+	volume = {85},
+	year = 2012,
+	bdsk-url-1 = {https://doi.org/10.1103%2Fphysrevd.85.044038},
+	bdsk-url-2 = {https://doi.org/10.1103/physrevd.85.044038}}
+
+@article{Giddings2012a,
+	author = {Steven B. Giddings},
+	date-added = {2023-08-07 20:31:00 -0400},
+	date-modified = {2023-08-07 20:31:02 -0400},
+	doi = {10.1103/physrevd.85.124063},
+	journal = {Phys. Rev. D},
+	note = {\href{http://arxiv.org/abs/1201.1037v4}{arxiv:1201.1037v4}},
+	number = {12},
+	publisher = {American Physical Society ({APS})},
+	title = {Black holes, quantum information, and unitary evolution},
+	url = {https://doi.org/10.1103%2Fphysrevd.85.124063},
+	volume = {85},
+	year = 2012,
+	bdsk-url-1 = {https://doi.org/10.1103%2Fphysrevd.85.124063},
+	bdsk-url-2 = {https://doi.org/10.1103/physrevd.85.124063}}
+
+@article{Giddings1992,
+	author = {Steven B. Giddings},
+	date-added = {2023-08-07 20:30:42 -0400},
+	date-modified = {2023-08-07 20:30:44 -0400},
+	doi = {10.1103/physrevd.46.1347},
+	journal = {Phys. Rev. D},
+	note = {\href{http://arxiv.org/abs/hep-th/9203059v1}{arxiv:hep-th/9203059v1}},
+	number = {4},
+	pages = {1347--1352},
+	publisher = {American Physical Society ({APS})},
+	title = {Black holes and massive remnants},
+	url = {https://doi.org/10.1103%2Fphysrevd.46.1347},
+	volume = {46},
+	year = 1992,
+	bdsk-url-1 = {https://doi.org/10.1103%2Fphysrevd.46.1347},
+	bdsk-url-2 = {https://doi.org/10.1103/physrevd.46.1347}}
+
+@article{Giddings2006,
+	author = {Steven B. Giddings},
+	date-added = {2023-08-07 20:28:49 -0400},
+	date-modified = {2023-08-07 20:29:26 -0400},
+	doi = {10.1103/physrevd.74.106009},
+	journal = {Phys. Rev. D},
+	note = {\href{http://arxiv.org/abs/hep-th/0606146v2}{arxiv:hep-th/0606146v2}},
+	number = {10},
+	publisher = {American Physical Society ({APS})},
+	title = {{(Non)perturbative gravity, nonlocality, and nice slices}},
+	url = {https://doi.org/10.1103%2Fphysrevd.74.106009},
+	volume = {74},
+	year = 2006,
+	bdsk-url-1 = {https://doi.org/10.1103%2Fphysrevd.74.106009},
+	bdsk-url-2 = {https://doi.org/10.1103/physrevd.74.106009}}
+
+@article{Gibbons1977a,
+	author = {Gibbons, Gary W and Hawking, Stephen W},
+	date-added = {2023-08-07 20:26:51 -0400},
+	date-modified = {2023-08-07 20:26:54 -0400},
+	journal = {Physical Review D},
+	number = {10},
+	pages = {2738},
+	publisher = {APS},
+	title = {Cosmological event horizons, thermodynamics, and particle creation},
+	volume = {15},
+	year = {1977}}
+
+@article{Gibbons1972,
+	author = {Gibbons, GW},
+	date-added = {2023-08-07 20:26:31 -0400},
+	date-modified = {2023-08-07 20:26:32 -0400},
+	journal = {Nature Physical Science},
+	number = {100},
+	pages = {77--77},
+	publisher = {Nature Publishing Group UK London},
+	title = {On lowering a rope into a black hole},
+	volume = {240},
+	year = {1972}}
+
+@article{Gibbons1977,
+	author = {Gibbons, Gary W and Hawking, Stephen W},
+	date-added = {2023-08-07 20:26:02 -0400},
+	date-modified = {2023-08-07 20:26:04 -0400},
+	journal = {Physical Review D},
+	number = {10},
+	pages = {2752},
+	publisher = {APS},
+	title = {Action integrals and partition functions in quantum gravity},
+	volume = {15},
+	year = {1977}}
+
+@article{Fulling1976,
+	author = {Fulling, Stephen A and Davies, Paul CW},
+	date-added = {2023-08-07 20:24:33 -0400},
+	date-modified = {2023-08-07 20:24:34 -0400},
+	journal = {Proceedings of the Royal Society of London. A. Mathematical and Physical Sciences},
+	number = {1654},
+	pages = {393--414},
+	publisher = {The Royal Society London},
+	title = {Radiation from a moving mirror in two dimensional space-time: conformal anomaly},
+	volume = {348},
+	year = {1976}}
+
+@article{Fulling1973,
+	author = {Fulling, Stephen A},
+	date-added = {2023-08-07 20:24:05 -0400},
+	date-modified = {2023-08-07 20:24:08 -0400},
+	journal = {Physical Review D},
+	number = {10},
+	pages = {2850},
+	publisher = {APS},
+	title = {Nonuniqueness of canonical field quantization in riemannian space-time},
+	volume = {7},
+	year = {1973}}
+
+@book{Fulling1989,
+	author = {Fulling, Stephen A},
+	date-added = {2023-08-07 20:23:28 -0400},
+	date-modified = {2023-08-07 20:23:39 -0400},
+	number = {17},
+	publisher = {Cambridge university press},
+	series = {London Mathematical Society Student Texts},
+	title = {Aspects of quantum field theory in curved spacetime},
+	year = {1989}}
+
+@book{Frolov2011,
+	author = {Frolov, Valeri P and Zelnikov, Andrei},
+	date-added = {2023-08-07 20:22:46 -0400},
+	date-modified = {2023-08-07 20:22:48 -0400},
+	publisher = {OUP Oxford},
+	title = {Introduction to black hole physics},
+	year = {2011}}
 
 @article{Frolov1993,
 	author = {Valery Frolov and Igor Novikov},
@@ -5226,27 +5529,11 @@
 	year = {2013},
 	bdsk-url-1 = {https://doi.org/10.1007/JHEP02(2013)062}}
 
-@article{Giddings:2011ks,
-	archiveprefix = {arXiv},
-	author = {Giddings, Steven B.},
-	date-added = {2019-12-04 18:10:01 -0500},
-	date-modified = {2019-12-04 18:10:01 -0500},
-	doi = {10.1103/PhysRevD.85.044038},
-	eprint = {1108.2015},
-	journal = {Phys. Rev.},
-	pages = {044038},
-	primaryclass = {hep-th},
-	slaccitation = {%%CITATION = ARXIV:1108.2015;%%},
-	title = {{Models for unitary black hole disintegration}},
-	volume = {D85},
-	year = {2012},
-	bdsk-url-1 = {https://doi.org/10.1103/PhysRevD.85.044038}}
-
-@article{Giddings:2006sj,
+@article{Giddings2006a,
 	archiveprefix = {arXiv},
 	author = {Giddings, Steven B.},
 	date-added = {2019-12-04 18:09:13 -0500},
-	date-modified = {2023-07-16 09:19:34 -0400},
+	date-modified = {2023-08-07 20:29:30 -0400},
 	doi = {10.1103/PhysRevD.74.106005},
 	eprint = {hep-th/0605196},
 	journal = {Phys. Rev.},
@@ -7532,11 +7819,11 @@
 	year = {2009},
 	bdsk-url-1 = {https://doi.org/10.1103/PhysRevD.79.044010}}
 
-@article{Giddings:2015uzr,
+@article{Giddings2016,
 	archiveprefix = {arXiv},
 	author = {Giddings, Steven B.},
 	date-added = {2019-03-03 14:29:50 -0500},
-	date-modified = {2019-03-03 14:30:26 -0500},
+	date-modified = {2023-08-07 20:29:38 -0400},
 	doi = {10.1016/j.physletb.2015.12.076},
 	eprint = {1511.08221},
 	journal = {Phys. Lett.},
@@ -7548,23 +7835,6 @@
 	volume = {B754},
 	year = {2016},
 	bdsk-url-1 = {https://doi.org/10.1016/j.physletb.2015.12.076}}
-
-@article{Giddings:2006be,
-	archiveprefix = {arXiv},
-	author = {Giddings, Steven B.},
-	date-added = {2019-03-03 14:28:32 -0500},
-	date-modified = {2019-03-03 14:29:03 -0500},
-	doi = {10.1103/PhysRevD.74.106009},
-	eprint = {hep-th/0606146},
-	journal = {Phys. Rev.},
-	note = {\href{https://arxiv.org/abs/hep-th/0606146}{arxiv:hep-th/0606146}},
-	pages = {106009},
-	primaryclass = {hep-th},
-	slaccitation = {%%CITATION = HEP-TH/0606146;%%},
-	title = {{(Non)perturbative gravity, nonlocality, and nice slices}},
-	volume = {D74},
-	year = {2006},
-	bdsk-url-1 = {https://doi.org/10.1103/PhysRevD.74.106009}}
 
 @article{Hawking_2001,
 	abstract = {A de Sitter brane-world bounding regions of anti-de Sitter
