--- a/bib.bib
+++ b/bib.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-07 20:40:21 -0400 
+%% Created for Pete Su at 2023-08-07 20:51:40 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -64,13 +64,13 @@
 @article{Giddings2020,
 	author = {Steven B. Giddings},
 	date-added = {2023-08-07 20:37:12 -0400},
-	date-modified = {2023-08-07 20:37:24 -0400},
+	date-modified = {2023-08-07 20:44:11 -0400},
 	doi = {10.1103/physrevd.102.125022},
 	journal = {Phys. Rev. D},
 	note = {\href{http://arxiv.org/abs/2006.10834v2}{arxiv:2006.10834v2}},
 	number = {12},
 	publisher = {American Physical Society ({APS})},
-	title = {{Schrodinger evolution of the Hawking state}},
+	title = {{Schr\"odinger evolution of the Hawking state}},
 	url = {https://doi.org/10.1103%2Fphysrevd.102.125022},
 	volume = {102},
 	year = 2020,
