--- a/2110.10690/bhthm5.tex
+++ b/2110.10690/bhthm5.tex
@@ -1,14 +1,13 @@
 %%%%%%%%%%%latex file%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %\documentstyle[12pt]{article}
 %\documentclass[12pt,epsf,epsfig]{article}
-\documentclass[11pt]{article}
+\documentclass[12pt]{article}
 \pdfoutput=1
 %\usepackage{epsf,epsfig}
  \usepackage{mciteplus}
  \usepackage{tikz}
  \usepackage{color}
  \definecolor{darkblue}{rgb}{0.1,0.1,.7}
- \usepackage[colorlinks, linkcolor=darkblue, citecolor=darkblue, urlcolor=darkblue, linktocpage,hyperfootnotes=false]{hyperref} 
 \usepackage{epsfig}
 \usepackage{graphicx}
 \usepackage{cite}
@@ -24,6 +23,53 @@
 %\def\be{\begin{equation}}
 \usepackage{amsmath}
 \numberwithin{equation}{section}
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.6in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\titlelabel{\thetitle.\quad}
+
+\usepackage{cite}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
+
 \def\bq{\begin{quote}}
 \def\eq{\end{quote}}
 \font\tinynk=cmr6 at 10truept
@@ -87,21 +133,10 @@
 
 
  \rm {Steven B. Giddings\footnote{\texttt{giddings@ucsb.edu}} }
-  \bigskip \rm
-\bigskip
 
-{Department of Physics, University of California, Santa Barbara, CA 93106, USA}  \\
+{Department of Physics, University of California,\\ Santa Barbara, CA 93106, USA}
 \rm
 
- % \bf {Write authors  }
-  \bigskip \rm
-\bigskip
- 
-\rm
-
-
-\bigskip
-\bigskip
 
 
 
@@ -109,8 +144,6 @@
   \end{center}
 
    
-
-\vspace{3cm}
   \begin{abstract}
   
 A general formulation of the basic conflict of the information problem is given, encapsulated in a ``black hole theorem."
