--- a/2110.10690/bhthm5.tex
+++ b/2110.10690/bhthm5.tex
@@ -171,7 +171,7 @@ Over time, there have been many proposed resolutions of this problem, though the
 
 This short paper will suggest an organization of our understanding of the problem which focusses on the basic conflict,  connects to an information theoretic perspective, and connects to  what appear to be important questions regarding the basic structure of quantum gravity.  Aspects of the current perspective are certainly understood, either implicitly or explicitly, by many working in the field.  However, some things go beyond past discussion.
 
-Specifically, firstly the present discussion will  place the problem in a more general context than that of evolution governed by local quantum field theory (LQFT) on a semiclassical background, in which it is typically formulated.  There are good reasons to expect that LQFT ultimately fails, and a very important question is what structure replaces it, and what of its features are retained.  If the world is fundamentally a quantum-mechanical system, a very general kinematic question is whether and how it can be divided into subsystems.  LQFT gives examples of such divisions, but such a division may well be part  (at least approximately) of a more complete description of quantum gravitational physics.  And if a black hole does behave as a subsystem, the problem can be phrased in terms of behavior of evolution of that subsystem.
+First, the present discussion will  place the problem in a more general context than that of evolution governed by local quantum field theory (LQFT) on a semiclassical background, in which it is typically formulated.  There are good reasons to expect that LQFT ultimately fails, and a very important question is what structure replaces it, and what of its features are retained.  If the world is fundamentally a quantum-mechanical system, a very general kinematic question is whether and how it can be divided into subsystems.  LQFT gives examples of such divisions, but such a division may well be part  (at least approximately) of a more complete description of quantum gravitational physics.  And if a black hole does behave as a subsystem, the problem can be phrased in terms of behavior of evolution of that subsystem.
 
 A second point is that this presents us with what appears to be a rather clear choice, which is encapsulated in the statement of a ``black hole theorem."  If the world can be decomposed, at least to an adequate approximation, into subsystems, and quantum mechanical evolution holds, and other inconsistencies are to be avoided, that implies certain behavior of the dynamical evolution of those subsystems, which appears not to respect the standard locality constraints of LQFT.
 
