--- a/2110.10690/bhthm5.tex
+++ b/2110.10690/bhthm5.tex
@@ -25,7 +25,7 @@
 \numberwithin{equation}{section}
 
 %\usepackage{amsmath,amsthm,amscd,amssymb}
-\usepackage[noBBpl,sc]{mathpazo}
+%\usepackage[noBBpl,sc]{mathpazo}
 \usepackage[papersize={6.6in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
 \linespread{1.05}
 \sloppy
