bib 670. some cleanup

--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,122 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-07 21:19:18 -0400 
+%% Created for Pete Su at 2023-08-08 07:32:52 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Hartle1983,
+	author = {Hartle, James B and Hawking, Stephen W},
+	date-added = {2023-08-08 07:32:49 -0400},
+	date-modified = {2023-08-08 07:32:51 -0400},
+	journal = {Physical Review D},
+	number = {12},
+	pages = {2960},
+	publisher = {APS},
+	title = {Wave function of the universe},
+	volume = {28},
+	year = {1983}}
+
+@article{Hartle2015,
+	author = {James Hartle and Thomas Hertog},
+	date-added = {2023-08-08 07:30:57 -0400},
+	date-modified = {2023-08-08 07:30:59 -0400},
+	doi = {10.1103/physrevd.92.063509},
+	journal = {Phys. Rev. D},
+	note = {\href{http://arxiv.org/abs/1502.06770v3}{arxiv:1502.06770v3}},
+	number = {6},
+	publisher = {American Physical Society ({APS})},
+	title = {Quantum transitions between classical histories},
+	url = {https://doi.org/10.1103%2Fphysrevd.92.063509},
+	volume = {92},
+	year = 2015,
+	bdsk-url-1 = {https://doi.org/10.1103%2Fphysrevd.92.063509},
+	bdsk-url-2 = {https://doi.org/10.1103/physrevd.92.063509}}
+
+@article{Harlow2013,
+	author = {Daniel Harlow and Patrick Hayden},
+	date-added = {2023-08-08 07:30:19 -0400},
+	date-modified = {2023-08-08 07:30:21 -0400},
+	doi = {10.1007/jhep06(2013)085},
+	journal = {J. High Energ. Phys.},
+	note = {\href{http://arxiv.org/abs/1301.4504v4}{arxiv:1301.4504v4}},
+	number = {6},
+	publisher = {Springer Science and Business Media {LLC}},
+	title = {Quantum computation vs. firewalls},
+	url = {https://doi.org/10.1007%2Fjhep06%282013%29085},
+	volume = {2013},
+	year = 2013,
+	bdsk-url-1 = {https://doi.org/10.1007%2Fjhep06%282013%29085},
+	bdsk-url-2 = {https://doi.org/10.1007/jhep06(2013)085}}
+
+@article{Harlow2012,
+	author = {Harlow, Daniel},
+	date-added = {2023-08-08 07:29:02 -0400},
+	date-modified = {2023-08-08 07:29:58 -0400},
+	journal = {arXiv preprint},
+	note = {\href{https://arxiv.org/abs/1207.6243}{arxiv:1207.6243} (withdrawn)},
+	title = {Complementarity, not firewalls},
+	year = {2012}}
+
+@article{Fredenhagen1990,
+	author = {Fredenhagen, Klaus and Haag, Rudolf},
+	date-added = {2023-08-08 07:27:07 -0400},
+	date-modified = {2023-08-08 07:27:09 -0400},
+	journal = {Communications in mathematical physics},
+	pages = {273--284},
+	publisher = {Springer},
+	title = {On the derivation of Hawking radiation associated with the formation of a black hole},
+	volume = {127},
+	year = {1990}}
+
+@incollection{Grumiller2014,
+	author = {Daniel Grumiller and Robert McNees and Jakob Salzer},
+	booktitle = {Fundamental Theories of Physics},
+	date-added = {2023-08-08 07:26:26 -0400},
+	date-modified = {2023-08-08 07:26:32 -0400},
+	doi = {10.1007/978-3-319-10852-0_2},
+	pages = {27--70},
+	publisher = {Springer International Publishing},
+	title = {Black Holes and Thermodynamics: The First Half Century},
+	url = {https://doi.org/10.1007%2F978-3-319-10852-0_2},
+	year = 2014,
+	bdsk-url-1 = {https://doi.org/10.1007%2F978-3-319-10852-0_2},
+	bdsk-url-2 = {https://doi.org/10.1007/978-3-319-10852-0_2}}
+
+@article{Gregory2014,
+	author = {Ruth Gregory and Ian G. Moss and Benjamin Withers},
+	date-added = {2023-08-08 07:25:33 -0400},
+	date-modified = {2023-08-08 07:25:39 -0400},
+	doi = {10.1007/jhep03(2014)081},
+	journal = {J. High Energ. Phys.},
+	note = {\href{http://arxiv.org/abs/1401.0017v1}{arxiv:1401.0017v1}},
+	number = {3},
+	publisher = {Springer Science and Business Media {LLC}},
+	title = {Black holes as bubble nucleation sites},
+	url = {https://doi.org/10.1007%2Fjhep03%282014%29081},
+	volume = {2014},
+	year = 2014,
+	bdsk-url-1 = {https://doi.org/10.1007%2Fjhep03%282014%29081},
+	bdsk-url-2 = {https://doi.org/10.1007/jhep03(2014)081}}
+
+@article{Goto2021,
+	author = {Kanato Goto and Thomas Hartman and Amirhossein Tajdini},
+	date-added = {2023-08-08 07:25:05 -0400},
+	date-modified = {2023-08-08 07:25:08 -0400},
+	doi = {10.1007/jhep04(2021)289},
+	journal = {J. High Energ. Phys.},
+	note = {\href{http://arxiv.org/abs/2011.09043v1}{arxiv:2011.09043v1}},
+	number = {4},
+	publisher = {Springer Science and Business Media {LLC}},
+	title = {Replica wormholes for an evaporating 2D black hole},
+	url = {https://doi.org/10.1007%2Fjhep04%282021%29289},
+	volume = {2021},
+	year = 2021,
+	bdsk-url-1 = {https://doi.org/10.1007%2Fjhep04%282021%29289},
+	bdsk-url-2 = {https://doi.org/10.1007/jhep04(2021)289}}
 
 @article{Giddings2023,
 	author = {Steven B Giddings},
@@ -2750,10 +2860,10 @@
 	bdsk-url-1 = {https://doi.org/10.1088%2F1402-4896%2Fab1547},
 	bdsk-url-2 = {https://doi.org/10.1088/1402-4896/ab1547}}
 
-@article{Jones_2015,
+@article{Jones2015,
 	author = {Eric R Jones and Roger A Bach and Herman Batelaan},
 	date-added = {2023-07-27 07:43:25 -0400},
-	date-modified = {2023-07-27 07:43:25 -0400},
+	date-modified = {2023-08-08 07:32:15 -0400},
 	doi = {10.1088/0143-0807/36/6/065048},
 	journal = {Eur. J. Phys.},
 	number = {6},
@@ -2890,10 +3000,10 @@
 	title = {The semiclassical way to dynamics and spectroscopy},
 	year = {2018}}
 
-@article{Hanson_2007,
+@article{Hanson2007,
 	author = {R. Hanson and L. P. Kouwenhoven and J. R. Petta and S. Tarucha and L. M. K. Vandersypen},
 	date-added = {2023-07-26 20:37:04 -0400},
-	date-modified = {2023-07-26 21:30:29 -0400},
+	date-modified = {2023-08-08 07:27:58 -0400},
 	doi = {10.1103/revmodphys.79.1217},
 	journal = {Rev. Mod. Phys.},
 	note = {\href{https://arxiv.org/abs/cond-mat/0610433}{arxiv:cond-mat/0610433}},
@@ -2907,10 +3017,10 @@
 	bdsk-url-1 = {https://doi.org/10.1103%2Frevmodphys.79.1217},
 	bdsk-url-2 = {https://doi.org/10.1103/revmodphys.79.1217}}
 
-@book{Haag_1996,
+@book{Haag1996,
 	author = {Rudolf Haag},
 	date-added = {2023-07-26 20:36:18 -0400},
-	date-modified = {2023-07-26 20:36:18 -0400},
+	date-modified = {2023-08-08 07:25:55 -0400},
 	doi = {10.1007/978-3-642-61458-3},
 	publisher = {Springer Berlin Heidelberg},
 	title = {Local Quantum Physics},
@@ -3084,10 +3194,10 @@
 	title = {Fundamentals of quantum mechanics},
 	year = {1978}}
 
-@article{Joseph_1970,
+@article{Joseph1970,
 	author = {A. Joseph},
 	date-added = {2023-07-25 07:07:01 -0400},
-	date-modified = {2023-07-25 07:07:05 -0400},
+	date-modified = {2023-08-08 07:32:13 -0400},
 	doi = {10.1007/bf01647091},
 	journal = {Commun.Math. Phys.},
 	number = {3},
@@ -5641,11 +5751,11 @@
 	year = {2003},
 	bdsk-url-1 = {https://doi.org/10.1016/S0370-1573(03)00263-1}}
 
-@article{Hubeny:2014bla,
+@article{Hubeny2015,
 	archiveprefix = {arXiv},
 	author = {Hubeny, Veronika E.},
 	date-added = {2019-11-24 10:47:51 -0500},
-	date-modified = {2023-07-15 08:34:53 -0400},
+	date-modified = {2023-08-08 07:31:20 -0400},
 	doi = {10.1088/0264-9381/32/12/124010},
 	eprint = {1501.00007},
 	journal = {Class. Quant. Grav.},
@@ -5763,11 +5873,11 @@
 	year = {2014},
 	bdsk-url-1 = {https://doi.org/10.1007/JHEP05(2014)053}}
 
-@article{Hamilton:2006az,
+@article{Hamilton2006,
 	archiveprefix = {arXiv},
 	author = {Hamilton, Alex and Kabat, Daniel N. and Lifschytz, Gilad and Lowe, David A.},
 	date-added = {2019-11-21 07:21:00 -0500},
-	date-modified = {2019-11-21 07:21:32 -0500},
+	date-modified = {2023-08-08 07:27:46 -0400},
 	doi = {10.1103/PhysRevD.74.066009},
 	eprint = {hep-th/0606141},
 	journal = {Phys. Rev.},
@@ -5781,11 +5891,11 @@
 	year = {2006},
 	bdsk-url-1 = {https://doi.org/10.1103/PhysRevD.74.066009}}
 
-@article{Harlow:2016vwg,
+@article{Harlow2016a,
 	archiveprefix = {arXiv},
 	author = {Harlow, Daniel},
 	date-added = {2019-11-20 18:20:26 -0500},
-	date-modified = {2019-11-20 18:20:55 -0500},
+	date-modified = {2023-08-08 07:28:16 -0400},
 	doi = {10.1007/s00220-017-2904-z},
 	eprint = {1607.03901},
 	journal = {Commun. Math. Phys.},
@@ -5882,11 +5992,11 @@
 	title = {{Why Boltzmann Brains Are Bad}},
 	year = {2017}}
 
-@article{Hartle:2007zv,
+@article{Hartle2007,
 	archiveprefix = {arXiv},
 	author = {Hartle, James B. and Srednicki, Mark},
 	date-added = {2019-09-28 21:30:32 -0400},
-	date-modified = {2019-09-28 21:30:58 -0400},
+	date-modified = {2023-08-08 07:31:05 -0400},
 	doi = {10.1103/PhysRevD.75.123523},
 	eprint = {0704.2630},
 	journal = {Phys. Rev.},
@@ -6986,10 +7096,10 @@
 	title = {{Path integral methods and applications}},
 	year = {2000}}
 
-@book{isham1995lectures,
+@book{Isham1995lectures,
 	author = {Isham, C.J.},
 	date-added = {2019-06-23 08:27:42 -0400},
-	date-modified = {2019-06-23 08:27:42 -0400},
+	date-modified = {2023-08-08 07:32:23 -0400},
 	isbn = {9781860940019},
 	lccn = {95025184},
 	publisher = {Imperial College Press},
@@ -7413,11 +7523,11 @@
 	year = {1995},
 	bdsk-url-1 = {https://doi.org/10.1007/BF02059126}}
 
-@article{Jadczyk:1994qh,
+@article{Jadczyk1995a,
 	archiveprefix = {arXiv},
 	author = {Jadczyk, A.},
 	date-added = {2019-03-12 07:43:07 -0400},
-	date-modified = {2019-03-12 07:43:29 -0400},
+	date-modified = {2023-08-08 07:32:02 -0400},
 	doi = {10.1143/PTP.93.631},
 	eprint = {hep-th/9407157},
 	journal = {Prog. Theor. Phys.},
@@ -7431,12 +7541,12 @@
 	year = {1995},
 	bdsk-url-1 = {https://doi.org/10.1143/PTP.93.631}}
 
-@inproceedings{Jadczyk:1993ib,
+@inproceedings{Jadczyk1993,
 	archiveprefix = {arXiv},
 	author = {Blanchard, P. and Jadczyk, A.},
 	booktitle = {{Capri Quantum Physics 1993:0022-37}},
 	date-added = {2019-03-12 07:41:21 -0400},
-	date-modified = {2023-07-15 08:35:22 -0400},
+	date-modified = {2023-08-08 07:31:55 -0400},
 	eprint = {hep-th/9311090},
 	note = {\href{https://arxiv.org/abs/hep-th/9311090}{arxiv:hep-th/9311090}},
 	pages = {0022-37},
@@ -7445,12 +7555,12 @@
 	title = {{From Quantum Probabilities to Classical Facts}},
 	year = {1993}}
 
-@inproceedings{Han:2005mu,
+@inproceedings{Han2005,
 	archiveprefix = {arXiv},
 	author = {Han, Tao},
 	booktitle = {{Physics in D >= 4. Proceedings, Theoretical Advanced Study Institute in elementary particle physics, TASI 2004, Boulder, USA, June 6-July 2, 2004}},
 	date-added = {2019-03-11 19:31:21 -0400},
-	date-modified = {2019-03-11 19:31:51 -0400},
+	date-modified = {2023-08-08 07:25:52 -0400},
 	doi = {10.1142/9789812773579_0008},
 	eprint = {hep-ph/0508097},
 	note = {\href{https://arxiv.org/abs/hep-ph/0508097}{arxiv:0508097}},
@@ -7767,11 +7877,11 @@
 	year = {2014},
 	bdsk-url-1 = {https://doi.org/10.12743/quanta.v3i1.22}}
 
-@article{Healey:2014lda,
+@article{Healey2014,
 	archiveprefix = {arXiv},
 	author = {Healey, Richard A.},
 	date-added = {2019-03-05 15:52:31 +0000},
-	date-modified = {2019-03-05 15:54:14 +0000},
+	date-modified = {2023-08-08 07:31:11 -0400},
 	doi = {10.1016/j.shpsb.2014.03.002},
 	eprint = {1405.3254},
 	journal = {Stud. Hist. Phil. Sci.},
@@ -7784,11 +7894,11 @@
 	year = {2014},
 	bdsk-url-1 = {https://doi.org/10.1016/j.shpsb.2014.03.002}}
 
-@article{Harlow:2014yka,
+@article{Harlow2016,
 	archiveprefix = {arXiv},
 	author = {Harlow, Daniel},
 	date-added = {2019-03-04 08:10:52 -0500},
-	date-modified = {2019-03-04 08:11:19 -0500},
+	date-modified = {2023-08-08 07:28:00 -0400},
 	doi = {10.1103/RevModPhys.88.015002},
 	eprint = {1409.1231},
 	journal = {Rev. Mod. Phys.},
@@ -8250,24 +8360,6 @@ horizon.},
 	year = {2012},
 	bdsk-url-1 = {https://doi.org/10.1007/JHEP08(2012)098}}
 
-@article{Gregory:2013hja,
-	archiveprefix = {arXiv},
-	author = {Gregory, Ruth and Moss, Ian G. and Withers, Benjamin},
-	date-added = {2019-02-16 23:38:13 +0000},
-	date-modified = {2019-02-16 23:39:03 +0000},
-	doi = {10.1007/JHEP03(2014)081},
-	eprint = {1401.0017},
-	journal = {JHEP},
-	note = {\href{https://xxx.lanl.gov/abs/1401.0017}{arxiv:1401.0017}},
-	pages = {081},
-	primaryclass = {hep-th},
-	reportnumber = {DCPT-13-43},
-	slaccitation = {%%CITATION = ARXIV:1401.0017;%%},
-	title = {{Black holes as bubble nucleation sites}},
-	volume = {03},
-	year = {2014},
-	bdsk-url-1 = {https://doi.org/10.1007/JHEP03(2014)081}}
-
 @article{Coleman1977,
 	author = {Coleman, Sidney},
 	date-added = {2019-02-16 23:23:28 +0000},
@@ -8286,11 +8378,11 @@ horizon.},
 	bdsk-url-1 = {https://link.aps.org/doi/10.1103/PhysRevD.15.2929},
 	bdsk-url-2 = {https://doi.org/10.1103/PhysRevD.15.2929}}
 
-@article{Isidori:2001bm,
+@article{Isidori2001,
 	archiveprefix = {arXiv},
 	author = {Isidori, Gino and Ridolfi, Giovanni and Strumia, Alessandro},
 	date-added = {2019-02-16 23:15:17 +0000},
-	date-modified = {2019-02-16 23:16:01 +0000},
+	date-modified = {2023-08-08 07:32:26 -0400},
 	doi = {10.1016/S0550-3213(01)00302-9},
 	eprint = {hep-ph/0104016},
 	journal = {Nucl. Phys.},
@@ -8388,12 +8480,12 @@ horizon.},
 	title = {{Elementary Introduction to Quantum Fields in Curved Spacetime}},
 	year = {2006}}
 
-@inproceedings{Jacobson:2003vx,
+@inproceedings{Jacobson2003,
 	archiveprefix = {arXiv},
 	author = {Jacobson, Ted},
 	booktitle = {{Lectures on quantum gravity. Proceedings, School of Quantum Gravity, Valdivia, Chile, January 4-14, 2002}},
 	date-added = {2019-02-10 22:16:48 +0000},
-	date-modified = {2019-02-10 22:17:40 +0000},
+	date-modified = {2023-08-08 07:31:24 -0400},
 	doi = {10.1007/0-387-24992-3_2},
 	eprint = {gr-qc/0308048},
 	note = {{\href{https://arxiv.org/abs/gr-qc/0308048v3}{arxiv:gr-qc/0308048v3}}},
@@ -8484,11 +8576,11 @@ horizon.},
 	year = {2017},
 	bdsk-url-1 = {https://doi.org/10.1142/9789813149441_0006}}
 
-@article{Hollands:2014eia,
+@article{Hollands2015,
 	archiveprefix = {arXiv},
 	author = {Hollands, Stefan and Wald, Robert M.},
 	date-added = {2019-02-10 13:22:42 +0000},
-	date-modified = {2019-02-10 13:22:56 +0000},
+	date-modified = {2023-08-08 07:31:16 -0400},
 	doi = {10.1016/j.physrep.2015.02.001},
 	eprint = {1401.2026},
 	journal = {Physics Reports},
