--- a/1502.06770/bncu9c-work.tex
+++ b/1502.06770/bncu9c-work.tex
@@ -30,16 +30,16 @@ bookmarksopenlevel=10
 }
 \usepackage[noBBpl,sc]{mathpazo}
 \linespread{1.1}
-\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
 \tolerance=2000
 \hbadness=2000
 \pagestyle{plain}
 
 % these include amsmath and that can cause trouble in older docs.
-\input{../helpers/mnsymbol.tex}
+\input{../helpers/cmrsum}
 \input{../helpers/fix-underbrace.tex}
 
-\usepackage[tiny]{titlesec}
+%\usepackage[tiny]{titlesec}
 \input{../helpers/revtex-12-fix.tex}
 
 \renewcommand{\Im}{{\rm Im}}
