--- a/2204.13126/dynBH18.tex
+++ b/2204.13126/dynBH18.tex
@@ -1,7 +1,7 @@
 %%%%%%%%%%%latex file%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %\documentstyle[12pt]{article}
 %\documentclass[12pt,epsf,epsfig]{article}
-\documentclass[11pt]{article}
+\documentclass[12pt]{article}
 \pdfoutput=1
 %\usepackage{epsf,epsfig}
  \usepackage{mciteplus}
@@ -9,8 +9,6 @@
  \usepackage{color}
  \usepackage{xcolor}
  \usepackage{comment}
- \definecolor{darkblue}{rgb}{0.1,0.1,.7}
- \usepackage[colorlinks, linkcolor=darkblue, citecolor=darkblue, urlcolor=darkblue, linktocpage,hyperfootnotes=false]{hyperref} 
 \usepackage{epsfig}
 \usepackage{graphicx}
 \usepackage{cite}
@@ -56,6 +54,53 @@
 \def\lesssim{~\mbox{\raisebox{-.6ex}{$\stackrel{<}{\sim}$}}~}
 \def\roughly#1{\raise.3ex\hbox{$#1$\kern-.75em\lower1ex\hbox{$\sim$}}}
 \newcommand{\Tr}{{\rm Tr}}
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[papersize={6.6in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\titlelabel{\thetitle.\quad}
+
+\usepackage{cite}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
+
+
 %\parskip 0.3cm
 %\renewcommand{\thefootnote}{\fnsymbol{footnote}}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -64,16 +109,6 @@
 
 \thispagestyle{empty}
 \begin{titlepage}
- % \rightline{}
-  \bigskip
-
-  \bigskip\bigskip 
-
-
-
-
-  \bigskip
-
 \begin{center}
 %\centerline
 {\Large \bf {Quantum evolution of the Hawking state for black holes
@@ -95,24 +130,9 @@
 {Department of Physics, University of California, Santa Barbara, CA 93106, USA}  \\
 \rm
 
- % \bf {Write authors  }
-  \bigskip \rm
-\bigskip
- 
-\rm
 
-
-\bigskip
-\bigskip
-
-
-
-% \vspace{2cm}
   \end{center}
 
-   
-
-\vspace{3cm}
   \begin{abstract}
 
 We give a general description of the evolving quantum state of a Schwarzschild black hole, in the quantum field theory approximation.  Such a time-dependent description is based on introducing a choice of time slices.  We in particular consider  slices that smoothly cross the horizon, and introduction of ``stationary" such slices simplifies the analysis.  This analysis goes beyond standard derivations of Hawking radiation that focus on asymptotic excitations, and in particular gives an evolving state that is regular at the horizon, with no explicit transplanckian dependence, and that can in principle be generalized to incorporate interacting fields.  It is also expected to be useful in connecting to information-theoretic investigation of black hole evolution.
