--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,28 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-08 07:32:52 -0400 
+%% Created for Pete Su at 2023-08-08 14:32:32 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Giddings2022,
+	author = {Steven B. Giddings and Julie Perkins},
+	date-added = {2023-08-08 14:32:26 -0400},
+	date-modified = {2023-08-08 14:32:28 -0400},
+	doi = {10.1103/physrevd.106.065011},
+	journal = {Phys. Rev. D},
+	note = {\href{http://arxiv.org/abs/2204.13126v2}{arxiv:2204.13126v2}},
+	number = {6},
+	publisher = {American Physical Society ({APS})},
+	title = {Quantum evolution of the Hawking state for black holes},
+	url = {https://doi.org/10.1103%2Fphysrevd.106.065011},
+	volume = {106},
+	year = 2022,
+	bdsk-url-1 = {https://doi.org/10.1103%2Fphysrevd.106.065011},
+	bdsk-url-2 = {https://doi.org/10.1103/physrevd.106.065011}}
 
 @article{Hartle1983,
 	author = {Hartle, James B and Hawking, Stephen W},
